[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orderlib"
version = "0.1.0"
description = "Order domain library (tax, discounts, totals)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Shirsha Ghosal" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[tool.setuptools]
packages = ["orderlib"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
